  with #defines in OS headers. Thanks to Steve Lhomme.
- Fixed a delete buf that should be a delete [] buf. 
  Thanks to Ephi Sinowitz.

Changes in version 1.2.4
- ReplaceChild() was almost guarenteed to fail. Should be fixed,
  thanks to Joe Smith. Joe also pointed out that the Print() functions
  should take stream references: I agree, and would like to overload
  the Print() method to take either format, but I don't want to do 
  this in a dot release.
- Some compilers seem to need an extra <ctype.h> include. Thanks
  to Steve Lhomme for that.

Changes in version 2.0.0 BETA
- Made the ToXXX() casts safe if 'this' is null. 
  When "LoadFile" is called with a filename, the value will correctly get set.
  Thanks to Brian Yoder.
- Fixed bug where isalpha() and isalnum() would get called with a negative value for 
  high ascii numbers. Thanks to Alesky Aksenov.
- Fixed some errors codes that were not getting set.
- Made methods "const" that were not.
- Added a switch to enable or disable the ignoring of white space. ( TiXmlDocument::SetIgnoreWhiteSpace() )
- Greater standardization and code re-use in the parser.
- Added a stream out operator.
- Added a stream in operator.
- Entity support, of predefined entites. &#x entities are untouched by input or output.
- Improved text out formatting.
- Fixed ReplaceChild bug, thanks to Tao Chen.

Changes in version 2.0.1
- Fixed hanging on loading a 0 length file. Thanks to Jeff Scozzafava.
- Fixed crashing on InsertBeforeChild and InsertAfterChild. Also possibility of bad links being 
  created by same function. Thanks to FIXME.
- Added missing licence text. Thanks to FIXME.
- Added <ctype.h> included, at the suggestion of FIXME. Some compilers seem to be really picky about that one.

Changes in OptionalSTL-branch
-----------------------------
- 2 new files : tinystr.h and tinystr.cpp
- no usage of STL anymore
- Still to do : modify gnu makefile
- Still to do : add conditional conversion functions for users of STL