@@ -5,19 +5,42 @@
 */
 #include "tinyxml.h"
 
-#ifdef TIXML_STRING
-   #include <stdio.h>
-#else
+#ifdef TIXML_USE_STL
    #include <iostream>
    #include <sstream>
    #include <strstream>
    using namespace std;
+#else
+   #include <stdio.h>
 #endif
 
 static int gPass = 0;
 static int gFail = 0;
 
-#ifdef TIXML_STRING
+#ifdef TIXML_USE_STL
+   // Utility functions:
+   template< class T >
+   bool XmlTest( const char* testString, T expected, T found, bool noEcho = false )
+   {
+	   if ( expected == found ) 
+		   cout << "[pass]";
+	   else
+		   cout << "[fail]";
+
+	   if ( noEcho )
+		   cout << " " << testString;
+	   else
+		   cout << " " << testString << " [" << expected << "][" <<  found << "]";
+	   cout << "\n";
+
+	   bool pass = ( expected == found );
+	   if ( pass )
+		   ++gPass;
+	   else
+		   ++gFail;
+	   return pass;
+   }
+#else
    bool XmlTest (const char * testString, const char * expected, const char * found, bool noEcho = false)
    {
 	   bool pass = ! strcmp (expected, found);
@@ -50,29 +73,6 @@ static int gFail = 0;
 	   else
          printf (" %s [%d][%d]\n", testString, expected, found);
 
-	   if ( pass )
-		   ++gPass;
-	   else
-		   ++gFail;
-	   return pass;
-   }
-#else
-   // Utility functions:
-   template< class T >
-   bool XmlTest( const char* testString, T expected, T found, bool noEcho = false )
-   {
-	   if ( expected == found ) 
-		   cout << "[pass]";
-	   else
-		   cout << "[fail]";
-
-	   if ( noEcho )
-		   cout << " " << testString;
-	   else
-		   cout << " " << testString << " [" << expected << "][" <<  found << "]";
-	   cout << "\n";
-
-	   bool pass = ( expected == found );
 	   if ( pass )
 		   ++gPass;
 	   else
@@ -136,10 +136,10 @@ int main()
 
 		if ( doc.Error() )
 		{
-         #ifdef TIXML_STRING
+         #ifdef TIXML_USE_STL
 			   printf( "Error in %s: %s\n", doc.Value(), doc.ErrorDesc() );
          #else
-			   printf( "Error in %s: %s\n", doc.Value().c_str(), doc.ErrorDesc().c_str() );
+			   printf( "Error in %s: %s\n", doc.Value(), doc.ErrorDesc() );
          #endif
 			exit( 1 );
 		}
@@ -151,10 +151,10 @@ int main()
 
 	if ( !loadOkay )
 	{
-      #ifdef TIXML_STRING
+      #ifdef TIXML_USE_STL
 		   printf( "Could not load test file 'demotest.xml'. Error='%s'. Exiting.\n", doc.ErrorDesc() );
       #else
-		   printf( "Could not load test file 'demotest.xml'. Error='%s'. Exiting.\n", doc.ErrorDesc().c_str() );
+		   printf( "Could not load test file 'demotest.xml'. Error='%s'. Exiting.\n", doc.ErrorDesc() );
       #endif
 		exit( 1 );
 	}
@@ -247,12 +247,12 @@ int main()
 	doc.Print( stdout );
 
 	printf( "** Demo doc processed to stream: ** \n\n" );
-   #ifdef TIXML_STRING
+   #ifdef TIXML_USE_STL
+	   cout << doc << endl << endl;
+   #else
       TiXmlOutStream ostr;
       ostr << doc;
       printf ("%s\n\n", ostr . c_str ());
-   #else
-	   cout << doc << endl << endl;
    #endif
 
 	// --------------------------------------------------------
@@ -264,50 +264,50 @@ int main()
 
 	//////////////////////////////////////////////////////
 
-   #ifdef TIXML_STRING
-      printf ("** Basic structure. **\n");
-      TiXmlOutStream outputStream;
-   #else
+   #ifdef TIXML_USE_STL
 	   cout << "** Basic structure. **\n";
 	   ostringstream outputStream( ostringstream::out );
+   #else
+      printf ("** Basic structure. **\n");
+      TiXmlOutStream outputStream;
    #endif
 	outputStream << doc;
-   #ifdef TIXML_STRING
-	   XmlTest ( "Output stream correct.", demoEnd, outputStream . c_str (), true );
-   #else
+   #ifdef TIXML_USE_STL
 	   XmlTest( "Output stream correct.", string( demoEnd ), outputStream.str(), true );
+   #else
+	   XmlTest ( "Output stream correct.", demoEnd, outputStream . c_str (), true );
    #endif
 
 	node = doc.RootElement();
 	XmlTest( "Root element exists.", true, ( node != 0 && node->ToElement() ) );	
-   #ifdef TIXML_STRING
-	   XmlTest ( "Root element value is 'ToDo'.", "ToDo",  node->Value());
+   #ifdef TIXML_USE_STL
+	   XmlTest( "Root element value is 'ToDo'.", string( "ToDo" ), std::string (node->Value()));
    #else
-	   XmlTest( "Root element value is 'ToDo'.", string( "ToDo" ), node->Value() );
+	   XmlTest ( "Root element value is 'ToDo'.", "ToDo",  node->Value());
    #endif
 	node = node->FirstChild();
 	XmlTest( "First child exists & is a comment.", true, ( node != 0 && node->ToComment() ) );
 	node = node->NextSibling();
 	XmlTest( "Sibling element exists & is an element.", true, ( node != 0 && node->ToElement() ) );
-   #ifdef TIXML_STRING
-	   XmlTest ( "Value is 'Item'.", "Item", node->Value() );
+   #ifdef TIXML_USE_STL
+	   XmlTest( "Value is 'Item'.", string( "Item" ), string (node->Value()));
    #else
-	   XmlTest( "Value is 'Item'.", string( "Item" ), node->Value() );
+	   XmlTest ( "Value is 'Item'.", "Item", node->Value() );
    #endif
 	node = node->FirstChild();
 	XmlTest ( "First child exists.", true, ( node != 0 && node->ToText() ) );
-   #ifdef TIXML_STRING
-	   XmlTest ( "Value is 'Go to the'.", "Go to the", node->Value() );
+   #ifdef TIXML_USE_STL
+	   XmlTest( "Value is 'Go to the'.", string( "Go to the" ), std::string (node->Value()));
    #else
-	   XmlTest( "Value is 'Go to the'.", string( "Go to the" ), node->Value() );
+	   XmlTest ( "Value is 'Go to the'.", "Go to the", node->Value() );
    #endif
 
 
 	//////////////////////////////////////////////////////
-   #ifdef TIXML_STRING
-	   printf ("\n** Iterators. **\n");
-   #else
+   #ifdef TIXML_USE_STL
 	   cout << "\n** Iterators. **" << "\n";
+   #else
+	   printf ("\n** Iterators. **\n");
    #endif
 	// Walk all the top level nodes of the document.
 	count = 0;
@@ -369,54 +369,29 @@ int main()
 	}
 	XmlTest( "'Item' children of the 'ToDo' element, using Last/Previous.", 3, count );
 
-   #ifdef TIXML_STRING
-	   printf ("\n** Parsing. **\n");
-      TiXmlInStream parse0 ( "<Element0 attribute0='foo0' attribute1= noquotes attribute2 = '&gt;' />" );
-   #else
+   #ifdef TIXML_USE_STL
 	   cout << "\n** Parsing. **\n";
 	   istringstream parse0( "<Element0 attribute0='foo0' attribute1= noquotes attribute2 = '&gt;' />" );
+   #else
+	   printf ("\n** Parsing. **\n");
+      TiXmlInStreamOwn parse0 ( "<Element0 attribute0='foo0' attribute1= noquotes attribute2 = '&gt;' />" );
    #endif
 	TiXmlElement element0( "default" );
 	parse0 >> element0;
 
-   #ifdef TIXML_STRING
+   #ifdef TIXML_USE_STL
+	   XmlTest( "Element parsed, value is 'Element0'.", string( "Element0" ), string (element0.Value()));
+	   // XmlTest( "Reads attribute 'attribute0=\"foo0\"'.", string( "foo0" ), *( element0.Attribute( "attribute0" ) ) );
+	   // XmlTest( "Reads incorrectly formatted 'attribute1=noquotes'.", string( "noquotes" ), *( element0.Attribute( "attribute1" ) ) );
+	   // XmlTest( "Read attribute with entity value '>'.", string( ">" ), *( element0.Attribute( "attribute2" ) ) );
+   #else
 	   XmlTest ( "Element parsed, value is 'Element0'.", "Element0", element0.Value() );
-   #else
-	   XmlTest( "Element parsed, value is 'Element0'.", string( "Element0" ), element0.Value() );
-   #endif
-   #ifdef TIXML_STRING
 	   XmlTest ( "Reads attribute 'attribute0=\"foo0\"'.", "foo0", element0.Attribute( "attribute0" ));
-   #else
-	   XmlTest( "Reads attribute 'attribute0=\"foo0\"'.", string( "foo0" ), *( element0.Attribute( "attribute0" ) ) );
-   #endif
-   #ifdef TIXML_STRING
 	   XmlTest ( "Reads incorrectly formatted 'attribute1=noquotes'.", "noquotes", element0.Attribute( "attribute1" ) );
-   #else
-	   XmlTest( "Reads incorrectly formatted 'attribute1=noquotes'.", string( "noquotes" ), *( element0.Attribute( "attribute1" ) ) );
-   #endif
-   #ifdef TIXML_STRING
 	   XmlTest ( "Read attribute with entity value '>'.", ">", element0.Attribute( "attribute2" ) );
-   #else
-	   XmlTest( "Read attribute with entity value '>'.", string( ">" ), *( element0.Attribute( "attribute2" ) ) );
    #endif
 
-   #ifdef TIXML_STRING
-	   //////////////////////////////////////////////////////
-	   printf ("\n** Streaming. **\n");
-
-	   // Round trip check: stream in, then stream back out to verify. The stream
-	   // out has already been checked, above. We use the output
-
-	   TiXmlInStream inputStringStream ( outputStream.c_str() );
-	   TiXmlDocument document0;
-
-	   inputStringStream >> document0;
-
-	   TiXmlOutStream outputStream0;
-	   outputStream0 << document0;
-
-	   XmlTest( "Stream round trip correct.", demoEnd, outputStream0.c_str(), true );
-   #else
+   #ifdef TIXML_USE_STL
 	   //////////////////////////////////////////////////////
 	   cout << "\n** Streaming. **\n";
 
@@ -432,39 +407,55 @@ int main()
 	   outputStream0 << document0;
 
 	   XmlTest( "Stream round trip correct.", string( demoEnd ), outputStream0.str(), true );
+   #else
+	   //////////////////////////////////////////////////////
+	   printf ("\n** Streaming. **\n");
+
+	   // Round trip check: stream in, then stream back out to verify. The stream
+	   // out has already been checked, above. We use the output
+
+	   TiXmlInStreamOwn inputStringStream ( outputStream.c_str() );
+	   TiXmlDocument document0;
+
+	   inputStringStream >> document0;
+
+	   TiXmlOutStream outputStream0;
+	   outputStream0 << document0;
+
+	   XmlTest( "Stream round trip correct.", demoEnd, outputStream0.c_str(), true );
    #endif
 
 	//////////////////////////////////////////////////////
-   #ifdef TIXML_STRING
-	   printf ("\n** Parsing, no Condense Whitespace **\n");
-   #else
+   #ifdef TIXML_USE_STL
 	   cout << "\n** Parsing, no Condense Whitespace **\n";
+   #else
+	   printf ("\n** Parsing, no Condense Whitespace **\n");
    #endif
 	TiXmlBase::SetCondenseWhiteSpace( false );
 
-   #ifdef TIXML_STRING
-      TiXmlInStream parse1( "<start>This  is    \ntext</start>" );
-   #else
+   #ifdef TIXML_USE_STL
 	   istringstream parse1( "<start>This  is    \ntext</start>" );
+   #else
+      TiXmlInStreamOwn parse1( "<start>This  is    \ntext</start>" );
    #endif
 	TiXmlElement text1( "text" );
 	parse1 >> text1;
 
-   #ifdef TIXML_STRING
-	   XmlTest ( "Condense white space OFF.", "This  is    \ntext",
-										     text1.FirstChild()->Value(),
+   #ifdef TIXML_USE_STL
+	   XmlTest( "Condense white space OFF.", string( "This  is    \ntext" ),
+										     string (text1.FirstChild()->Value()),
 										     true );
    #else
-	   XmlTest( "Condense white space OFF.", string( "This  is    \ntext" ),
+	   XmlTest ( "Condense white space OFF.", "This  is    \ntext",
 										     text1.FirstChild()->Value(),
 										     true );
    #endif
 							
 	//////////////////////////////////////////////////////
-   #ifdef TIXML_STRING
-   	printf ("\n** Bug regression tests **\n");
-   #else
+   #ifdef TIXML_USE_STL
 	   cout << "\n** Bug regression tests **\n";
+   #else
+   	printf ("\n** Bug regression tests **\n");
    #endif
 
 	// InsertBeforeChild and InsertAfterChild causes crash.
@@ -489,10 +480,10 @@ int main()
 		XmlTest( "Test InsertAfterChild on empty node. ", ( childNode1 == parent.LastChild() ), true );
 	}
 
-   #ifdef TIXML_STRING
-      printf ("\nPass %d, Fail %d\n", gPass, gFail);
-   #else
+   #ifdef TIXML_USE_STL
 	   cout << endl << "Pass " << gPass << ", Fail " << gFail << endl;	
+   #else
+      printf ("\nPass %d, Fail %d\n", gPass, gFail);
    #endif
 	return gFail;
 }
